fix(faq): dark mode

--- a/src/styles/pages/histoire/en-bref.css
+++ b/src/styles/pages/histoire/en-bref.css
@@ -53,7 +53,7 @@ footer.footer {
 
 .ns__tile--colored h2,
 .ns__tile--colored p {
-    color: var(--modal-surface-text);
+    color: var(--text-color);
 }
 
 .ns__tile--incendie h2,
@@ -118,6 +118,11 @@ footer.footer {
     text-transform: uppercase;
     font-size: 16px;
     font-family: Noto Sans, Arial, Helvetica, sans-serif;
+    color: var(--navbar-link);
+}
+
+.unmute-btn i {
+    color: var(--navbar-link);
 }
 
 .play {
@@ -136,6 +141,8 @@ footer.footer {
 .play .icon {
     position: absolute;
     transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--navbar-link);
+    fill: var(--navbar-link);
 }
 
 .play.playing .before {
